# tilde-imgui

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  readme.md
tests/: CMakeLists.txt  test_tilde_app_controller.cpp  test_tilde_canvas_data.cpp  test_tilde_console_controller.cpp  test_tilde_file_io.cpp  test_tilde_object_base.cpp  test_tilde_object_data.cpp  test_tilde_patch_controller.cpp  test_tilde_properties.cpp  test_tilde_undo.cpp
tests/mocks/: mock_app_controller.h  mock_app_controller_base.h  mock_arrangeobjects.h  mock_canvas_data.h  mock_clipboard.h  mock_common_menus.h  mock_console_controller.h  mock_create_objects.h  mock_fileparser.h  mock_filesaver.h  mock_grid.h  mock_imgui_mvc.h  mock_object_base.h  mock_object_menu.h  mock_patch_controller.h  mock_patch_menus.h  mock_preferences.h  mock_properties_window.h  mock_uiobject.h  mock_uiobject_base.h  mock_undostack.h  mock_view_controllers.h  mock_views.h
ui-lib/: CMakeLists.txt  tilde~_ui_library.pro
ui-lib/ceammc_lib/: CMakeLists.txt  array_load_pattern.cpp  array_load_pattern.h  ceammc.c  ceammc.cpp  ceammc.h  ceammc.hpp  ceammc_abstractdata.cpp  ceammc_abstractdata.h  ceammc_array.cpp  ceammc_array.h  ceammc_atom.cpp  ceammc_atom.h  ceammc_atomlist.cpp  ceammc_atomlist.h  ceammc_autopreset.cpp  ceammc_autopreset.h  ceammc_bpf.h  ceammc_canvas.cpp  ceammc_canvas.h  ceammc_convert.cpp  ceammc_convert.h  ceammc_convert_pitch.cpp  ceammc_data.cpp  ceammc_data.h  ceammc_dataatom.cpp  ceammc_dataatom.h  ceammc_dataatomlist.cpp  ceammc_dataatomlist.h  ceammc_datastorage.cpp  ceammc_datastorage.h  ceammc_datatypes.h  ceammc_factory.cpp  ceammc_factory.h  ceammc_faust.cpp  ceammc_faust.h  ceammc_fn_list.cpp  ceammc_fn_list.h  ceammc_fn_vector.cpp  ceammc_fn_vector.h  (+40 more)
ui-lib/src/: baseUIClass.cpp  baseUIClass.h  pdclass.cpp  pdinstance.cpp  pdmethod.cpp  pdproperty.cpp  pdsignal.cpp  ui_array.cpp  ui_array.h  ui_bang.cpp  ui_bang.h  ui_dsp.cpp  ui_dsp.h  ui_float.cpp  ui_float.h  ui_matrix.cpp  ui_matrix.h  ui_msg.cpp  ui_msg.h  ui_script.cpp  ui_script.h  ui_sliders.cpp  ui_sliders.h  ui_text.cpp  ui_text.h  ui_toggle.cpp  ui_toggle.h
ui-lib/tilde~_ui_library/: baseUIClass.cpp  baseUIClass.h  tilde~_ui_library.cpp  tilde~_ui_library.h
xpd/: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  codecov.yml  config.h.in  in_source_build.cmake
xpd/cmake/: cmake_uninstall.cmake  config.cmake  sound.cmake  summary.cmake  version.cmake
xpd/config/: script.sh
xpd/distrib/rtaudio/: CMakeLists.txt
xpd/doxygen/: doxyfile
xpd/doxygen/preview/html/: _audio_session_types_8h_source.html  _rt_audio_8h.html  _rt_audio_8h_source.html  abstractserver_8h_source.html  abstractserverprocess_8h_source.html  android__sink_8h_source.html  annotated.html  ansicolor__sink_8h_source.html  arguments_8h_source.html  array_8h_source.html  asio_8h_source.html  asiodrivers_8h_source.html  asiodrvr_8h_source.html  asiolist_8h_source.html  asiosys_8h_source.html  async__log__helper_8h_source.html  async__logger_8h_source.html  async__logger__impl_8h_source.html  audioclient_8h_source.html  audiodevice_8h_source.html  audiodevicemanager_8h_source.html  auto__cpu__timer_8hpp_source.html  base__sink_8h_source.html  bench_2latency_2utils_8h_source.html  bench_2utils_8h_source.html  binary__visitor__impl_8hpp_source.html  canvas_8h_source.html  canvasobserver_8h_source.html  catch__approx_8hpp_source.html  catch__assertionresult_8h_source.html  catch__assertionresult_8hpp_source.html  catch__capture_8hpp_source.html  catch__clara_8h_source.html  catch__commandline_8hpp_source.html  catch__common_8h_source.html  catch__common_8hpp_source.html  catch__compiler__capabilities_8h_source.html  catch__config_8hpp_source.html  catch__console__colour_8hpp_source.html  catch__console__colour__impl_8hpp_source.html  (+3199 more)
xpd/doxygen/preview/html/search/: all_31.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6e.js  all_6f.js  (+105 more)
xpd/pd/: CMakeLists.txt
xpd/pd/cpd/: CMakeLists.txt  cpd.cpp  cpd.h  cpd_array.cpp  cpd_array.h  cpd_array_element.cpp  cpd_array_element.h  cpd_atom.cpp  cpd_atom.h  cpd_canvas.cpp  cpd_canvas.h  cpd_catcher.cpp  cpd_catcher.h  cpd_class.cpp  cpd_class.h  cpd_connection.cpp  cpd_connection.h  cpd_def.h  cpd_dsp.cpp  cpd_dsp.h  cpd_env.cpp  cpd_env.h  cpd_globals.cpp  cpd_globals.h  cpd_list.cpp  cpd_list.h  cpd_loader.cpp  cpd_loader.h  cpd_method.cpp  cpd_method.h  cpd_object.cpp  cpd_object.h  cpd_patch.cpp  cpd_patch.h  cpd_receiver.cpp  cpd_receiver.h  cpd_system_lists.cpp  cpd_system_lists.h  cpd_types.cpp  cpd_types.h  (+2 more)
xpd/pd/mocks/: m_conf.c
xpd/src/: CMakeLists.txt  abstractserver.cpp  abstractserver.h  abstractserverprocess.cpp  abstractserverprocess.h  arguments.cpp  arguments.h  array.cpp  array.h  audiodevice.cpp  audiodevice.h  audiodevicemanager.cpp  audiodevicemanager.h  canvas.cpp  canvas.h  canvasobserver.cpp  canvasobserver.h  classinfo.cpp  classinfo.h  connection.cpp  connection.h  consoleobserver.cpp  consoleobserver.h  device.cpp  device.h  libraryinfo.cpp  libraryinfo.h  logger.cpp  logger.h  mididevice.cpp  mididevice.h  mididevicemanager.cpp  mididevicemanager.h  object.cpp  object.h  objectlist.cpp  objectlist.h  objectproperties.cpp  objectproperties.h  observer.cpp  (+34 more)
xpd/tests/: CMakeLists.txt  test_cpd.cpp  test_cpd_array.cpp  test_cpd_atom.cpp  test_cpd_canvas.cpp  test_cpd_catcher.cpp  test_cpd_class.cpp  test_cpd_connections.cpp  test_cpd_dsp.cpp  test_cpd_env.cpp  test_cpd_list.cpp  test_cpd_loader.cpp  test_cpd_method.cpp  test_cpd_object.cpp  test_xpd_abstract_server.cpp  test_xpd_abstract_server_process.cpp  test_xpd_array.cpp  test_xpd_objectlist.cpp  test_xpd_pd_arguments copy.cpp  test_xpd_pd_canvas.cpp  test_xpd_pd_floatarray.cpp  test_xpd_pd_localprocess.cpp  test_xpd_pd_localserver.cpp  test_xpd_pd_object.cpp  test_xpd_pd_observers.cpp
xpd/tests/pd/: simple_abstraction_1.pd  subpatch_abstraction_1.pd  test_abstraction_1.pd  test_empty_patch.pd  test_patch_core_objects.pd
(+149 files in other folders)
